added logo and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
       name="description"
       content="Wesleys Profile Page"
     />
-
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/my-logo.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <title>Wesley Salesberry</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
